test/deca/context/valid/3_17_decl_boolean_true.deca
// Description:
//    Affectation et typage : type différent de void

{
    boolean b = true;
}