test/deca/context/invalid/3_17_decl_float_string.deca
// Description:
//    Affectation et typage
//
// Resultats:
//    Ligne 11: affectation de types incompatibles

{
    float f = "projet" ;
}
